@@ -31,6 +31,7 @@ TECH TODO:
    *. Giant Space Mobs! Including Space Mobs that have rooms inside.
    *. Droids! Powered slave mobs.
    *. Radiation Props: Alpha (damage), Beta (?!), Gamma (Mutation if in too long)
+   *. Multiple SPACE arrays for planes of existence.
 
 NON-TECH (Long Term) TODO:
    *. MudChat - integrate with Percolator for mood/attitude based adjective variety
