@@ -2728,6 +2728,15 @@ corpse, causing them to become resurrected.  The cleric need not pray over the c
 this magic to succeed, and the corpse need not be a player.  However, a spirit can only \
 be re-bound to its body with this method once per mud-day.
 
+PRAYER_UNDEATHGUARD=PRAYER_UNDEATH_GUARD
+PRAYER_UNDEATH_GUARD=<ABILITY>\
+Usage    : PRAY "UNDEATH GUARD" [TARGET NAME]\n\r\
+Example  : pray "undeath guard" bob\n\r\
+The undead target of this prayer comes under the guardianship of the cleric and his or her God. \
+When the target falls below 30% hit points, or 130% of their wimpy setting, the cleric will \
+automatically cast one of their basic harming spells: Harm, Cause Critical, Cause Serious, or \
+Cause Light Wounds, thus healing the target.
+
 UNDENIABLE_FAITH=PRAYER_UNDENIABLEFAITH
 PRAYER_UNDENIABLEFAITH=<ABILITY>\
 Usage    : PRAY "UNDENIABLE FAITH" [TARGET NAME]\n\r\
