@@ -11,6 +11,7 @@
  10. Prop_NoPurge now supports an expiration date/timestamp
  11. New StdMob type: CombatDummy, for testing.
  12. New spell: Wizard's Mark
+ 13. New prayer: Undeath Guard
 
 # Build 5.10.2 Release 4/28/2023
   *  DATABASE CHANGED! (Enlarged CMDATE, and new expiration date added to CMJRNL table)
